demo2/envoy-front.yaml
# Envoy modifies URL based on host so dispatch can route to different services

static_resources:
  # Envoy calls outgoing connections "clusters"
  clusters:
  - name: service1
    filters:
    - name: envoy.filters.network.amqp_client
      config: { bridge: { named_relay: "service1" } }
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5672 }}]
    type: static
    connect_timeout: 0.25s

  - name: service2
    filters:
    - name: envoy.filters.network.amqp_client
      config: { bridge: { named_relay: "service2" } }
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5672 }}]
    type: static
    connect_timeout: 0.25s

  listeners:
  - name: http_in
    address: { socket_address: { address: 0.0.0.0, port_value: 8000 } }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          route_config:
            virtual_hosts:
            - name: service1
              domains: ["localhost:8000"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service1 }
            - name: service2
              domains: ["127.0.0.1:8000"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service2 }

          http_filters:
          - name: envoy.router
            config: {}
          stat_prefix: http_in

# Envoy boilerplate
admin:
  access_log_path: /tmp/envoy-front-access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9900 }
