demo2/envoy2.yaml
# Envoy acting as sidecar and REST service (using it's own admin console)
static_resources:
  listeners:
  - name: amqp_in
    address: { socket_address: { address: 0.0.0.0, port_value: 25672 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.amqp_server
        config:
          bridge:
            sources: ["service2"]
            anonymous_relay: true # For responses
      - name: envoy.http_connection_manager
        config:
          route_config:
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { prefix_rewrite: "/", cluster: "admin" }
          http_filters:
          - name: envoy.router
          stat_prefix: amqp_in

  clusters:

  - name: "admin"              # Use own admin service as demo service
    hosts: [{ socket_address: { address: localhost, port_value: 9902 }}]
    connect_timeout: 0.25s
    dns_lookup_family: v4_only
    type: logical_dns

# Envoy boilerplate
admin:
  access_log_path: /tmp/envoy-back-access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9902 }
