demo2/ernie.yaml
# Envoy acting as sidecar to REST service
static_resources:
  listeners:
  - name: amqp_in
    address: { socket_address: { address: 0.0.0.0, port_value: 15672 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.amqp_server
        config:
          bridge:
            sources: [ernie]
            anonymous_relay: true # For responses
      - name: envoy.http_connection_manager
        config:
          route_config:
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: ernie
                  auto_host_rewrite: true
          http_filters:
          - name: envoy.router
          stat_prefix: amqp_in

  clusters:
  - name: ernie
    hosts: [{ socket_address: { address: issues.apache.org, port_value: 443 }}]
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: v4_only
    tls_context: { }

# Envoy boilerplate
admin:
  access_log_path: /tmp/envoy-back-access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
