demo2/front.yaml
# Envoy on local port 80, client sidecar
static_resources:
  listeners:
  - name: http_in
    address: { socket_address: { address: 0.0.0.0, port_value: 80 } }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          route_config:
            virtual_hosts:
            - name: ernie
              domains: ["ernie.local"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: ernie }
            - name: bert
              domains: ["bert.local"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: bert }
            - name: grover
              domains: ["grover.local"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grover, host_rewrite: echo.jsontest.com }
          http_filters:
          - name: envoy.router
            config: {}
          stat_prefix: http_in

  clusters:   # Outgoing connections
  - name: ernie
    filters:
    - name: envoy.filters.network.amqp_client
      config: { bridge: { named_relay: ernie } }
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 15672 }}]
    type: static
    connect_timeout: 0.25s

  - name: bert
    filters:
    - name: envoy.filters.network.amqp_client
      config: { bridge: { named_relay: bert } }
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 25672 }}]
    type: static
    connect_timeout: 0.25s

  - name: grover          # Direct to echo.jsontest.com via HTTPS
    hosts: [{ socket_address: { address: echo.jsontest.com, port_value: 80 }}]
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: v4_only

# Envoy boilerplate
admin:
  access_log_path: /tmp/envoy-front-access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9900 }
